Starts on courses page

--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -70,6 +70,7 @@ a
     height: 252px
 
 .page-title
+    margin-top 100px
     height 150px
     justify-content center
     padding 1rem
@@ -195,3 +196,9 @@ a
 @import './single-project'
 @import './services'
 
+.courses-top
+    margin-top 100px
+    background linear-gradient(180deg, rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url('/static/img/drone-courses.jpg')
+    background-position center center
+    height 300px
+    
