--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -25,7 +25,7 @@
                         <a href="{% url 'home' %}"><li>Home</li></a>
                         <a href="{% url 'services' %}"><li>Soluções e Serviços</li></a>
                         <a href="{% url 'projects' %}"><li>Portfólio</li></a>
-                        <a href="#"><li>MyView Academy</li></a>     
+                        <a href="{% url 'courses' %}"><li>MyView Academy</li></a>     
                         <a href="#"><li>Pilotos</li></a>
                     </ul>
                     <span id="mobile-menu" class="fa fa-bars"></span>
@@ -35,7 +35,7 @@
                 <a href="{% url 'home' %}"><li>Home</li></a>
                 <a href="{% url 'services' %}"><li>Soluções e Serviços</li></a>
                 <a href="{% url 'projects' %}"><li>Portfólio</li></a>
-                <a href="#"><li>MyView Academy</li></a>
+                <a href="{% url 'courses' %}"><li>MyView Academy</li></a>
                 <a href="#"><li>Pilotos</li></a>
             </ul>
         </header>
