Starts on top footer

--- a/home/static/home/styl/footer.styl
+++ b/home/static/home/styl/footer.styl
@@ -1,3 +1,32 @@
 .footer
-    background-color darkcolor
+    background-color #000000
     padding 2.5rem 0
+
+.pre-footer
+    padding 0 2rem 2rem 2rem
+    flex-wrap wrap
+    background-color darkcolor
+
+.pre-footer_item
+    margin-top 3rem
+    padding 0 1rem
+    width 100%
+
+.pre-footer_item_title
+    margin-bottom 40px
+
+.footer-logo
+    img
+        height 80px
+        margin-left -25px
+        margin-top -25px
+
+.footer-logo_text, .footer-logo_btn
+    margin-top 0
+
+@media(min-width 768px)
+    .pre-footer
+        padding 0 3rem 3rem 3rem
+
+    .pre-footer_item
+        width 25%
