--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -100,6 +100,14 @@ a
     &.big
         font-size 16px
 
+.light-label
+    font-family: 'Montserrat', sans-serif
+    color: white
+    font-size: 14px
+    text-transform: uppercase
+    &.big
+        font-size 16px
+
 .light-text
     color: lightgraycolor
     font-weight: 300
