Adds big footer

--- a/home/static/home/styl/footer.styl
+++ b/home/static/home/styl/footer.styl
@@ -24,6 +24,16 @@
 .footer-logo_text, .footer-logo_btn
     margin-top 0
 
+.pre-footer_item_instagram_container
+    flex-wrap wrap
+    justify-content space-between
+
+.django_instagram_media_wall_item
+    width 32%
+    img
+        width 100%
+        height auto
+
 @media(min-width 768px)
     .pre-footer
         padding 0 3rem 3rem 3rem
