--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1100,6 +1100,20 @@ input {
 .footer-logo_btn {
   margin-top: 0;
 }
+.pre-footer_item_instagram_container {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.django_instagram_media_wall_item {
+  width: 32%;
+}
+.django_instagram_media_wall_item img {
+  width: 100%;
+  height: auto;
+}
 @media (min-width: 768px) {
   .pre-footer {
     padding: 0 3rem 3rem 3rem;
