--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -206,7 +206,25 @@ a
 
 .courses-top
     margin-top 100px
-    background linear-gradient(180deg, rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url('/static/img/drone-courses.jpg')
+    background url('/static/img/drone-courses.jpg')
     background-position center center
     height 300px
+    position relative
     
+.courses-title, .courses-content
+    padding 0 1.5rem
+    
+.courses-item
+    display flex
+    flex-direction column
+    img
+        margin-bottom 2rem
+
+@media(min-width 768px)
+    .courses-title, .courses-content
+        padding 0 8rem
+    .courses-item
+        flex-direction row
+        img
+            margin-bottom 0
+            margin-right 2rem
