--- a/home/templates/courses.html
+++ b/home/templates/courses.html
@@ -16,7 +16,9 @@
             <div class="flex-column start">
                 <span class="dark-label big">Titulo curso 1</span>
                 <p class="light-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ipsa modi doloremque nostrum voluptatem eaque natus ratione, numquam molestiae minus libero odio ullam debitis obcaecati omnis atque laboriosam? Sed, laboriosam.</p>
-                <button class="button">Contato</button>
+                <form action="{% url 'home' %}#contact">
+                    <button class="button">Contato</button>
+                </form>
             </div>
         </div>
         <br>
@@ -25,7 +27,9 @@
             <div class="flex-column start">
                 <span class="dark-label big">Titulo curso 2</span>
                 <p class="light-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ipsa modi doloremque nostrum voluptatem eaque natus ratione, numquam molestiae minus libero odio ullam debitis obcaecati omnis atque laboriosam? Sed, laboriosam.</p>
-                <button class="button">Contato</button>
+                <form action="{% url 'home' %}#contact">
+                    <button class="button">Contato</button>
+                </form>
             </div>
         </div>
     </div>
