Padding on courses page

--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -211,18 +211,28 @@ a
     height 300px
     position relative
     
-.courses-title, .courses-content
+.courses-title
     padding 0 1.5rem
-    
+
+.courses-content
+    padding 2rem 1.5rem
+
 .courses-item
     display flex
     flex-direction column
+    margin-bottom 4rem
+    &:last-child
+        margin-bottom 0
     img
         margin-bottom 2rem
 
 @media(min-width 768px)
-    .courses-title, .courses-content
+    .courses-title
         padding 0 8rem
+
+    .courses-content
+        padding 4rem 8rem
+
     .courses-item
         flex-direction row
         img
