--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -145,7 +145,7 @@
 			<span class="light-text">{{ content.texto_contato }}</span>
 			<br>
 			<span class="dark detail-text">{{ content.endereco_contato }}</span>
-			<span class="dark detail-text">{{ content.numero_e_email }}</span>
+			<span class="dark detail-text">{{ content.telefone }} / {{ content.email }}</span>
 			<br>
 			<div class="flex contact-info_icons">
 				<a target="_blank" href="https://www.facebook.com/myviewdrones/"><i class="icon-button fa fa-facebook"></i></a>
