--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -47,14 +47,14 @@
                 <div class="footer-logo">
                     <a href="{% url 'home' %}"><img src="{% static 'img/logo-white.png' %}" alt=""></a>
                 </div>
-                <p class="light-text white footer-logo_text">Lorem ipsum dolor sit amet, consect etur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+                <p class="light-text white footer-logo_text">{{ content.descricao_rodape }}</p>
                 <a href="#contact" class="o-button-reverse footer-logo_btn">Contato</a>     
             </div>
             <div class="pre-footer_item flex-column start">
                 <span class="light-label pre-footer_item_title">Entre em contato</span>
-                <span class="light-text white"><span class="fa fa-map-marker"></span> 14 Tottenham Court Road, London, England</span>
-                <span class="light-text white"><span class="fa fa-phone"></span> (102) 3456 789</span>
-                <span class="light-text white"><span class="fa fa-envelope-o"></span> support@cmssuperheroes.com</span>
+                <span class="light-text white"><span class="fa fa-map-marker"></span> {{ content.endereco_contato }}</span>
+                <span class="light-text white"><span class="fa fa-phone"></span> {{ content.telefone }}</span>
+                <span class="light-text white"><span class="fa fa-envelope-o"></span> {{ content.email }}</span>
             </div>
             <div class="pre-footer_item flex-column start">
                 <span class="light-label pre-footer_item_title">Entre em contato</span>
