--- a/home/static/home/styl/services.styl
+++ b/home/static/home/styl/services.styl
@@ -1,3 +1,5 @@
+special-margin = 8%
+
 .services-page-list
     padding 4rem 2.5rem 0 2.5rem
     flex-wrap wrap
@@ -12,6 +14,29 @@
         list-style none
         padding-left 0
 
+.special-service
+    margin-bottom 4rem
+    flex-wrap wrap
+    padding 0
+
+.special-service_img
+    width 100%
+    overflow hidden
+    margin-bottom 1rem
+    img
+        width 100%
+        height auto
+
+.special-service_content
+    ul
+        list-style none
+        padding-left 0
+        margin 0
+
+.special-service_content
+    width 100%
+    padding 0 1rem
+
 @media(min-width 768px)
     .services-page-list
         padding 6rem 4rem 0 4rem
@@ -19,6 +44,21 @@
     .service-page-item
         width 50%
 
-@media(min-width 1040px)
-    .service-page-item
-        width 33.333333%
+    .special-service
+        margin-bottom 6rem
+        padding 0 4rem
+        justify-content space-between
+        &:last-child
+            margin-bottom 4rem
+        &:nth-child(2n)
+            .special-service_img
+                order 2
+            .special-service_content
+                order 1
+
+    .special-service_img
+        margin-bottom 0
+        width 55%
+    .special-service_content
+        width 40%
+        padding-bottom 0
