--- a/home/templates/services.html
+++ b/home/templates/services.html
@@ -3,86 +3,92 @@
     MyView - Soluções
 {% endblock %}
 {% block content %}
-    {% load static %}   
+    {% load static %}
     <div class="flex bg-light page-title">
         <h2 class="subtitle dark text-center">Soluções e Serviços</h2>
     </div>
     <div class="flex start full-w services-page-list">
         <div class="flex start service-page-item">
-            <i class="fa fa-3x fa-envelope-open-o"></i>
+            <i class="fa fa-4x fa-envelope-open-o"></i>
             <div class="flex-column start service-page-item_content">
                 <span class="dark-label big">Web Design</span>
                 <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
                 </ul>
             </div>
         </div>
         <div class="flex start service-page-item">
-            <i class="fa fa-3x fa-envelope-open-o"></i>
+            <i class="fa fa-4x fa-envelope-open-o"></i>
             <div class="flex-column start service-page-item_content">
                 <span class="dark-label big">Web Design</span>
                 <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
                 </ul>
             </div>
         </div>
         <div class="flex start service-page-item">
-            <i class="fa fa-3x fa-envelope-open-o"></i>
+            <i class="fa fa-4x fa-envelope-open-o"></i>
             <div class="flex-column start service-page-item_content">
                 <span class="dark-label big">Web Design</span>
                 <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
                 </ul>
             </div>
         </div>
         <div class="flex start service-page-item">
-            <i class="fa fa-3x fa-envelope-open-o"></i>
+            <i class="fa fa-4x fa-envelope-open-o"></i>
             <div class="flex-column start service-page-item_content">
                 <span class="dark-label big">Web Design</span>
                 <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
                 </ul>
             </div>
         </div>
         <div class="flex start service-page-item">
-            <i class="fa fa-3x fa-envelope-open-o"></i>
+            <i class="fa fa-4x fa-envelope-open-o"></i>
             <div class="flex-column start service-page-item_content">
                 <span class="dark-label big">Web Design</span>
                 <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
                 </ul>
             </div>
         </div>
         <div class="flex start service-page-item">
-            <i class="fa fa-3x fa-envelope-open-o"></i>
+            <i class="fa fa-4x fa-envelope-open-o"></i>
             <div class="flex-column start service-page-item_content">
                 <span class="dark-label big">Web Design</span>
                 <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
                 </ul>
             </div>
         </div>
@@ -93,4 +99,53 @@
     <br>
     <br>
     <br>
+    <div class="flex justify-center bg-light section-title_container">
+        <h2 class="title dark text-center">Serviços Especiais</h2>
+    </div>
+    <div class="flex-column full-w bg-light">
+        <div class="flex special-service full-w">
+            <div class="special-service_img">
+                <img src="{% static 'img/special-service.jpg' %}" alt="">
+            </div>
+            <div class="flex-column start special-service_content">
+                <span class="dark-label big">Web Design</span>
+                <br>
+                <div style="width:30px;height:4px;background:#5bd7c5;margin-bottom:34px;"></div>
+                <ul>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="flex special-service full-w">
+            <div class="special-service_img">
+                <img src="{% static 'img/special-service.jpg' %}" alt="">
+            </div>
+            <div class="flex-column start special-service_content">
+                <span class="dark-label big">Web Design</span>
+                <br>
+                <div style="width:30px;height:4px;background:#5bd7c5;margin-bottom:34px;"></div>
+                <ul>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="full-w bg-light">
+        <form action="{% url 'home' %}#contact" class="flex-column full-w">
+            <button class="button">Entre em Contato</button>
+        </form>
+        <br>
+        <br>
+        <br>
+    </div>
 {% endblock %}
