--- a/home/static/home/styl/services.styl
+++ b/home/static/home/styl/services.styl
@@ -20,12 +20,23 @@ special-margin = 8%
     padding 0
 
 .special-service_img
+    position relative
     width 100%
     overflow hidden
     margin-bottom 1rem
     img
         width 100%
         height auto
+
+.special-service_overlay
+    height 100%
+    width 100%
+    z-index 100
+    position absolute
+    top 0
+    left 0
+    background-color secondarycolor
+    opacity 0.1
 
 .special-service_content
     ul
