--- a/home/templates/services.html
+++ b/home/templates/services.html
@@ -105,6 +105,7 @@
     <div class="flex-column full-w bg-light">
         <div class="flex special-service full-w">
             <div class="special-service_img">
+                <div class="special-service_overlay"></div>
                 <img src="{% static 'img/special-service.jpg' %}" alt="">
             </div>
             <div class="flex-column start special-service_content">
@@ -123,6 +124,7 @@
         </div>
         <div class="flex special-service full-w">
             <div class="special-service_img">
+                <div class="special-service_overlay"></div>
                 <img src="{% static 'img/special-service.jpg' %}" alt="">
             </div>
             <div class="flex-column start special-service_content">
