Footer, home video and repeting categories

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -9,8 +9,8 @@
 		<div class="video-container">
 			<div class="filter"></div>
 			<video autoplay loop class="full-w" muted>
-				<source src="{% static 'videos/myview.mp4' %}" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-				<source src="{% static 'videos/myview.webm' %}" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+				<source src="{% static 'videos/myview2.mp4' %}" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+				<source src="{% static 'videos/myview2.webm' %}" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
 			</video>
 		</div>
 		<div class="flex-column min-full-size justify-center">
