Adds contacts page and newsletter section

--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -203,38 +203,17 @@ a
 @import './projects'
 @import './single-project'
 @import './services'
+@import './courses'
 
-.courses-top
-    margin-top 100px
-    background url('/static/img/drone-courses.jpg')
-    background-position center center
-    height 300px
-    position relative
+.newsletter-container
+    padding 5rem 2rem
+    flex-wrap wrap
     
-.courses-title
-    padding 0 1.5rem
-
-.courses-content
-    padding 2rem 1.5rem
-
-.courses-item
-    display flex
-    flex-direction column
-    margin-bottom 4rem
-    &:last-child
-        margin-bottom 0
-    img
-        margin-bottom 2rem
-
+    input
+        width 100%
+        margin 1rem 1rem
+    
 @media(min-width 768px)
-    .courses-title
-        padding 0 8rem
-
-    .courses-content
-        padding 4rem 8rem
-
-    .courses-item
-        flex-direction row
-        img
-            margin-bottom 0
-            margin-right 2rem
+    .newsletter-container
+        input
+            width 300px
