--- a/home/templates/services.html
+++ b/home/templates/services.html
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>
-    <form action="{% url 'home' %}#contact" class="flex-column full-w">
+    <form action="{% url 'contact' %}" class="flex-column full-w">
         <button class="button">Mande uma Mensagem</button>
     </form>
     <br>
@@ -143,7 +143,7 @@
         </div>
     </div>
     <div class="full-w bg-light">
-        <form action="{% url 'home' %}#contact" class="flex-column full-w">
+        <form action="{% url 'contact' %}" class="flex-column full-w">
             <button class="button">Entre em Contato</button>
         </form>
         <br>
