--- a/home/templates/courses.html
+++ b/home/templates/courses.html
@@ -17,7 +17,7 @@
                 <div class="flex-column start">
                     <span class="dark-label big">{{ c.name }}</span>
                     <p class="light-text">{{ c.description }}</p>
-                    <form action="{% url 'home' %}#contact">
+                    <form action="{% url 'contact' %}">
                         <button class="button">Contato</button>
                     </form>
                 </div>
