--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -12,6 +12,7 @@
             <span class="light-text">{{ content.texto_contato }}</span>
             <br>
             <span class="dark detail-text">{{ content.endereco_contato }}</span>
+            <span class="dark detail-text">{{ content.endereco_contato_complemento }}</span>
             <span class="dark detail-text">{{ content.telefone }} / {{ content.email }}</span>
             <br>
             <div class="flex contact-info_icons">
