--- a/home/templates/single_project.html
+++ b/home/templates/single_project.html
@@ -6,7 +6,7 @@
     {% load static %}
     {% get_media_prefix as media_prefix %}
     <div class="flex bg-light page-title">
-        <h2 class="subtitle dark text-center">{{ project.name }}</h2>
+        <h2 class="subtitle dark text-center"><a href="{% url 'projects' %}">Portfólio</a> / {{ project.name }}</h2>
     </div>
     <div class="single_project-container full-w">
         <div class="flex-column single_project-photos">
